# D2-Grail-OBS

./: .gitignore  Cargo.toml  LICENSE  README.md  blankcred.json  blankenv.blank  blankenv.env  gsconnector.go  main.go  token.json  types.go
.github/workflows/: rust.yml
gameinterface/: gameinterface.go
gameinterface/gametypes/: gametypes.go
gsconnector/: gsconnector.go  libfuncs.go
gsconnector/gsclib/: gsclib.go
src/: google_sheets_connector.rs  gsc.rs  main.rs
types/: types.go
